# electron-app

./: package-lock.json  package.json
src/: main.js
src/_frontend/: package.json
src/_frontend/src/: index.js
src/addons/test-cpp/: CMakeLists.txt  package-lock.json  package.json
src/addons/test-cpp/src/: test.cpp
src/frontend/: package-lock.json  webpack.config.js
src/frontend/src/: index.js  index.pug  index.scss  test.worker.js
src/frontend/src/cpp/: genmake.json
src/frontend/src/cpp/makefiles/clang-wasm32/: Makefile
src/frontend/src/cpp/src/: entry-wasm32.cpp  entry-wasm64.cpp
